# langclaude

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FINDINGS.md
examples/: run_full_agent.py
src/langclaude/: __init__.py  full_agent.py  part0_scratch_loop.py  part1_loop.py  part2_tools.py  part3_planning.py  part4_context.py  part5_subagents.py  part6_safety.py  part7_persistence.py
tests/: conftest.py  test_full_agent.py  test_part0_scratch_loop.py  test_part1_loop.py  test_part2_tools.py  test_part3_planning.py  test_part4_context.py  test_part5_subagents.py  test_part6_safety.py  test_part7_persistence.py
